--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/tomato.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tomato Birthday</title>
     <style>
@@ -75,7 +75,7 @@
   <body>
     <div class="container">
       <div class="tomato">
-        <img class="tomatoImage" src="/tomato.svg" alt="">
+        <img class="tomatoImage" src="./public/tomato.svg" alt="">
       </div>
       <div class="timer">
         <div class="hours"></div>
@@ -115,7 +115,7 @@
 
       const leadingZero = (num) => (num < 10 ? `0${num}` : num);
       function playMusic() {
-        const audio = new Audio('/happy.mp3');
+        const audio = new Audio('./public/happy.mp3');
         audio.play();
       }
     </script>
