--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         if (elpasedTime < 0) {
           playMusic();
           clearInterval(timerInterval);
-          document.querySelector('.hours').textContent = '';
-          document.querySelector('.minutes').textContent = '';
-          document.querySelector('.seconds').textContent = '';
+          document.querySelector('.hours').textContent = '00h';
+          document.querySelector('.minutes').textContent = '00m';
+          document.querySelector('.seconds').textContent = '00s';
           document.querySelector('.text').textContent = 'Happy Birthday!!!';
 
         }
